--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,12 @@
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>3.2.4</version>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>de.flapdoodle.embed</groupId>-->
+<!--            <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>-->
+<!--            <version>4.6.2</version>-->
+<!--            <optional>true</optional>-->
+<!--        </dependency>-->
     </dependencies>
     <build>
             <plugins>
