--- a/pom.xml
+++ b/pom.xml
@@ -8,6 +8,14 @@
     <artifactId>myTodo</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!--	<configuration>-->
+    <!--		<source>1.8</source> &lt;!&ndash; or your source version &ndash;&gt;-->
+    <!--		<target>1.8</target> &lt;!&ndash; or your target version &ndash;&gt;-->
+    <!--		<compilerArgs>-->
+    <!--			<arg>-parameters</arg>-->
+    <!--		</compilerArgs>-->
+    <!--	</configuration>-->
+
     <properties>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
@@ -37,28 +45,31 @@
             <artifactId>spring-boot-starter-data-mongodb</artifactId>
             <version>3.2.4</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>de.flapdoodle.embed</groupId>-->
-<!--            <artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>-->
-<!--            <version>4.6.2</version>-->
-<!--            <optional>true</optional>-->
-<!--        </dependency>-->
+
+        <!--		<dependency>-->
+        <!--			<groupId>de.flapdoodle.embed</groupId>-->
+        <!--			<artifactId>de.flapdoodle.embed.mongo.spring30x</artifactId>-->
+        <!--			<version>4.6.2</version>-->
+        <!--			<optional>true</optional>-->
+        <!--		</dependency>-->
     </dependencies>
+
+
     <build>
-            <plugins>
-                <plugin>
-                    <groupId>org.apache.maven.plugins</groupId>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <version>3.8.1</version>
-                    <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
-                        <compilerArgs>
-                            <arg>-parameters</arg>
-                        </compilerArgs>
-                    </configuration>
-                </plugin>
-            </plugins>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.8.1</version> <!-- Or the latest version -->
+                <configuration>
+                    <source>1.8</source> <!-- Or your Java version -->
+                    <target>1.8</target> <!-- Or your Java version -->
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
 </project>
